--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,8 +20,6 @@ jobs:
       uses: actions/setup-go@v4
       with:
         go-version: '1.20'
-    - name: ChangeHome
-      run: cd urlshortner
     - name: Build
-      run: ls -alh && go build -race -o ../releases/2024-02-03/urlshortner .
+      run: cd urlshortner && go build -race -o ../releases/2024-02-03/urlshortner .
 
