--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,9 +5,9 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "release" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "release" ]
 
 jobs:
 
@@ -21,5 +21,5 @@ jobs:
       with:
         go-version: '1.21.6'
     - name: Build
-      run: cd urlshortner && go build -race -o ../releases/2024-02-03/urlshortner .
+      run: cd urlshortner && go build -race -o ../releases/${{ steps.date.outputs.date }}/urlshortner .
 
