segregated based upon builds

--- a/urlshortner/configs/config.json
+++ b/urlshortner/configs/config.json
@@ -12,7 +12,7 @@
     "dynamodb":{
         "tablename": "UrlDb"
     },
-    "storagedb": "mongodb",
+    "storagedb": "dynamodb", 
     "cacheEnabled": false,
     "cachedb": "redis",
     "cacheTimeout": 1
